tests/baselines/reference/parser512325.errors.txt
==== tests/cases/compiler/parser512325.ts (7 errors) ====
    var tt = (a, (b, c)) => a+b+c;
                         ~~
!!! parser512325.ts(1,22): error TS1005: ';' expected.
              ~
!!! parser512325.ts(1,11): error TS2095: Cannot find name 'a'.
                  ~
!!! parser512325.ts(1,15): error TS2095: Cannot find name 'b'.
                     ~
!!! parser512325.ts(1,18): error TS2095: Cannot find name 'c'.
                            ~
!!! parser512325.ts(1,25): error TS2095: Cannot find name 'a'.
                              ~
!!! parser512325.ts(1,27): error TS2095: Cannot find name 'b'.
                                ~
!!! parser512325.ts(1,29): error TS2095: Cannot find name 'c'.